save files again. html, css, js, media queries, and tiny responsive grid

--- a/practice.html
+++ b/practice.html
@@ -55,7 +55,7 @@
             <li><a href="#">Merchandise</a></li>  
           </ul>
           
-          <a href="#" id="pull">Menu</a>
+          <a href="#" id="pull">Menu of DEATH</a>
         </nav>
 
         <header role="banner" class="container mt-lg mb-xl ta-c debug">
